PageManager now deletes queues, supports split uuid paths